Fix overflow issue on small tablets

--- a/styles/Stats.module.scss
+++ b/styles/Stats.module.scss
@@ -2,7 +2,7 @@
 	display: flex;
 	gap: 50px;
 
-	@media (max-width: 600px) {
+	@media (max-width: 800px) {
 		gap: 20px;
 		flex-direction: column;
 		padding-right: 10px;
